[gd_scene load_steps=4 format=3 uid="uid://dosopuq4mlquv"]

[ext_resource type="Script" path="res://scripts/items/wall_touch.gd" id="1_vufq5"]
[ext_resource type="PackedScene" uid="uid://b6uk22qt6jnq1" path="res://scenes/ui/dialog_box.tscn" id="2_qcf3h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ec2ld"]
size = Vector2(1170, 211)

[node name="WallTouch" type="Area2D"]
script = ExtResource("1_vufq5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(575, 95.5)
shape = SubResource("RectangleShape2D_ec2ld")

[node name="DialogBox" parent="." instance=ExtResource("2_qcf3h")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
